<resources>
    <string name="app_name" translatable="false">Biluma</string>

    <string name="common_back">返回</string>
    <string name="common_more">更多</string>
    <string name="common_retry">重试</string>
    <string name="common_delete">删除</string>
    <string name="common_clear">清空</string>
    <string name="common_search">搜索</string>
    <string name="common_save">保存</string>
    <string name="common_cancel">取消</string>
...
